<resources>
    <string name="app_name">Magical Towns Of Mexico</string>
    <string name="action_settings">Settings</string>
    <string name="magicaltown">Magical Town</string>
    <string name="title_activity_mtom_maps">Maps</string>
    <string name="menu_video">Video</string>
    <string name="menu_about">About</string>
    <string name="menu_home">Home</string>
    <string name="google_maps_string">AIzaSyBPf_6_dXuq_cuWVY9qaCsmh8BULkgrxQQ</string>
    <string name="about_company">FunkyM0nk3y</string>
    <string name="about_version">Version 0.9-alfa</string>
    <string name="about_about">Desarrollo de aplicaciones móviles: Android, Módulo 2</string>
    <string name="about_collaborate">https://github.com/FunkyM0nk3y</string>
    <string name="about_author">Luis Antonio Galindo Castro</string>
</resources>
