<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txtAboutCompany"
            style="@style/listMT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/about_company"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="49dp" />

        <TextView
            android:id="@+id/t"
            style="@style/listMTsubcoll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/about_author"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_below="@+id/txtAboutCompany"
            android:layout_centerHorizontal="true" />

        <ImageView
            android:id="@+id/imgAboutLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_about_logo" />

        <TextView
            android:id="@+id/txtAboutVersion"
            style="@style/listMTsub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgAboutLogo"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="59dp"
            android:text="@string/about_version"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView"
            style="@style/listMTsubcoll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtAboutVersion"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:text="@string/about_collaborate"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/txtAboutCollaboration"
            style="@style/listMTsubcoll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:text="@string/about_about"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </RelativeLayout>
</LinearLayout>